<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal">

    <TextView
        android:text="@string/player_rules_title"
        style="@style/HowToPlayText.Title"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/play_rules_first_rule"
        style="@style/HowToPlayText"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:src="@drawable/play_rules_first_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:text="@string/play_rules_first_example_explanation"
        style="@style/HowToPlayText"/>

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="5"/>
</LinearLayout>