<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal">

    <TextView
        android:text="@string/how_to_win_title"
        style="@style/HowToPlayText.Title"
        />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:text="@string/how_to_win_game_win_explanation"
        style="@style/HowToPlayText"
        />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <ImageView
        android:src="@drawable/how_to_win_game_won_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:text="@string/how_to_win_game_how_won_two"
        style="@style/HowToPlayText"
        />

    <Space
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        />
</LinearLayout>